--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 					<button class="menu"></button>
 					<div class="nav">
 						<ul>
+							<li for="shop"><a href="javascript:void()">商城</a></li>
 							<li for="game"><a href="javascript:void()">Game</a></li>
 							<li for="nft-idx"><a href="javascript:void()">NFT</a></li>
 							<li for="tutorial"><a href="javascript:void()">教學</a></li>
