--- a/personal.html
+++ b/personal.html
@@ -71,6 +71,7 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
+                        <li><a href="shop.html">商城</a></li>
                         <li><a href="game.html">Game</a></li>
                         <li><a href="index.html#nft-idx">NFT</a></li>
                         <li><a href="index.html#tutorial">教學</a></li>
