首頁新增成員介紹

--- a/game.html
+++ b/game.html
@@ -162,7 +162,7 @@
                                     <li>休閒</li>
                                     <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">即將上線</button></div>
+                                <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
                             </a>
                         </li>
                         <li>
@@ -176,7 +176,7 @@
                                     <li>休閒</li>
                                     <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">即將上線</button></div>
+                                <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
                             </a>
                         </li>
                         <li>
@@ -190,93 +190,9 @@
                                     <li>命運</li>
                                     <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">即將上線</button></div>
+                                <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
                             </a>
                         </li>
-                        <!-- <li>
-                            <a href="bet-big-small.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Bet Big/Small</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>dice</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="odd-even-betting.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Odd/Even Betting</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>dice</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="higher-number-wins.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Higher number wins</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>dice</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="coin-matching.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Coin Matching</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>coin</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="red-vs-black.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Red vs. Black</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>roulette</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="spin-the-wheel.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Spin the Wheel</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>roulette</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </section>
@@ -284,17 +200,6 @@
 
         <footer>
             <div class="mask"></div>
-            <!-- <img class="popUp--open" for="mission" src="img/daily-mission.png"> -->
-            <!-- <ul class="sns">
-                <li>
-                    <button class="btn-rounded" onclick="window.open('https://twitter.com/ZKaizoku_')">
-                        <i class="icon-Twitter"></i>
-                    </button>
-                </li>
-                <li>
-                    <button class="btn-rounded"><i class="icon-Telegram"></i></button>
-                </li>
-            </ul> -->
         </footer>
 
 
