--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					</div>
 					<div class="container">
 						<div class="desc">
-							<p class="title-xl">精選遊戲</p>
+							<p class="h1">精選遊戲</p>
 							<p class="body-1">拿出望遠鏡，探索最新上架的矚目遊戲！</p>
 							<a class="button btn-secondary" href="game.html">查看全部遊戲</a>
 						</div>
@@ -213,7 +213,7 @@
 												<li>休閒</li>
 												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">即將上線</button>
+											<button class="btn-tertiary" disabled>即將上線</button>
 										</div>
 									</div>
 									<div class="swiper-slide">
@@ -225,7 +225,7 @@
 												<li>休閒</li>
 												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">即將上線</button>
+											<button class="btn-tertiary" disabled>即將上線</button>
 										</div>
 									</div>
 									<div class="swiper-slide">
@@ -237,7 +237,7 @@
 												<li>命運</li>
 												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">即將上線</button>
+											<button class="btn-tertiary" disabled>即將上線</button>
 										</div>
 									</div>
 								</div>
@@ -303,7 +303,7 @@
 							<div class="swiper-pagination"></div>
 						</div>
 						<div class="desc">
-							<p class="title-xl">NFT</p>
+							<p class="h1">NFT</p>
 							<p class="body-1">
 								Description description description description description description description
 								description.
@@ -316,7 +316,7 @@
 				<section id="tutorial">
 					<div class="container">
 						<div class="title">
-							<p class="title-xl">平台使用教學</p>
+							<p class="h1">平台使用教學</p>
 							<p class="body-1">
 								連接錢包、累積$ZKZ，與我們一同打造充滿驚奇的海盜冒險時代！
 							</p>
@@ -378,6 +378,115 @@
 					</div>
 					<div class="container">
 						<img src="img/PieChart.png">
+					</div>
+				</section>
+
+				<section id="character">
+					<div class="bg"></div>
+					<div class="container">
+						<p class="h1 text-center">Charaters</p>
+						<ul>
+							<li class="protoss">
+								<img src="img/character/lanieve.jpg">
+								<h4><span>Lanieve</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Protoss"></i> Protoss</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="protoss">
+								<img src="img/character/joanne.jpg">
+								<h4><span>Joanne</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Protoss"></i> Protoss</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="demigod">
+								<img src="img/character/yoyo.jpg">
+								<h4><span>Yoyo</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Demigod"></i> Demigod</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="demigod">
+								<img src="img/character/nelson.jpg">
+								<h4><span>Nelson</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Demigod"></i> Demigod</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="demigod">
+								<img src="img/character/debby.jpg">
+								<h4><span>Debby</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Demigod"></i> Demigod</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/semi.jpg">
+								<h4><span>Semi</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/lexie.jpg">
+								<h4><span>Lexie</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/jacqueline.jpg">
+								<h4><span>Jacqueline</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/dylan.jpg">
+								<h4><span>Dylan</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/lucy.jpg">
+								<h4><span>Lucy</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+						</ul>
 					</div>
 				</section>
 
