成員介紹調整 (其他系項詳見說明)
遊戲內頁因應文案調整排版

小網調整：
1. 成員介紹版面調整
2. 首頁遊戲按鈕調整
3. 首頁 .h1 調整
4. login彈窗寬度

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 												<li>卡牌</li>
 												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">查看遊戲介紹</button>
+											<button onclick="location='MTP.html'" class="btn-tertiary">查看遊戲介紹</button>
 										</div>
 									</div>
 									<div class="swiper-slide">
@@ -371,10 +371,6 @@
 							<source src="img/bg/zkz-bg.mp4" type="video/mp4">
 							<source src="img/bg/zkz-bg.webm" type="video/webm">
 						</video>
-						<!-- <video class="bg-mobile" autoplay muted loop poster="img/bg/zkz-bg-m.jpg">
-							<source src="img/bg/zkz-bg-m.mp4" type="video/mp4">
-							<source src="img/bg/zkz-bg-m.webm" type="video/webm">
-						</video> -->
 					</div>
 					<div class="container">
 						<img src="img/PieChart.png">
