遊戲內頁測試文案改回中文

--- a/MTP.html
+++ b/MTP.html
@@ -249,10 +249,10 @@
                                 <div class="odd-n-bet">
                                     <div class="odds">
                                         <label>
-                                            Mission success reward
+                                            任務成功回報率
                                             <i class="icon-InfoCircle popUp--open" for="odds"></i>
                                         </label>
-                                        <h3>xN.NN</h3>
+                                        <h3>5.82</h3>
                                     </div>
                                     <div class="bets">
                                         <label for="bets">投入海盜積分(ZKZ)</label>
