--- a/game.html
+++ b/game.html
@@ -137,61 +137,53 @@
                 <div class="container">
                     <h3>Game</h3>
                     <ul class="game-list">
-                        <li>
-                            <a href="MTP.html">
-                                <div class="img">
-                                    <img src="img/game/MTP/thumb.jpg">
-                                </div>
-                                <h4>默契海盜</h4>
-                                <ul class="tags">
-                                    <li>角色</li>
-                                    <li>卡牌</li>
-                                    <li>&lt;3分鐘</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
-                            </a>
+                        <li onclick="location='MTP.html'">
+                            <div class="img">
+                                <img src="img/game/MTP/thumb.jpg">
+                            </div>
+                            <h4>默契海盜</h4>
+                            <ul class="tags">
+                                <li>角色</li>
+                                <li>卡牌</li>
+                                <li>&lt;3分鐘</li>
+                            </ul>
+                            <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">
-                                <div class="img">
-                                    <img src="img/game/PSS/thumb.jpg">
-                                </div>
-                                <h4>剪刀石頭布</h4>
-                                <ul class="tags">
-                                    <li>科幻</li>
-                                    <li>休閒</li>
-                                    <li>&lt;3分鐘</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
-                            </a>
+                            <div class="img">
+                                <img src="img/game/PSS/thumb.jpg">
+                            </div>
+                            <h4>剪刀石頭布</h4>
+                            <ul class="tags">
+                                <li>科幻</li>
+                                <li>休閒</li>
+                                <li>&lt;3分鐘</li>
+                            </ul>
+                            <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">
-                                <div class="img">
-                                    <img src="img/game/IC/thumb.jpg">
-                                </div>
-                                <h4>星際連線</h4>
-                                <ul class="tags">
-                                    <li>科幻</li>
-                                    <li>休閒</li>
-                                    <li>&lt;3分鐘</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
-                            </a>
+                            <div class="img">
+                                <img src="img/game/IC/thumb.jpg">
+                            </div>
+                            <h4>星際連線</h4>
+                            <ul class="tags">
+                                <li>科幻</li>
+                                <li>休閒</li>
+                                <li>&lt;3分鐘</li>
+                            </ul>
+                            <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>神秘輪盤</h4>
-                                <ul class="tags">
-                                    <li>海盜</li>
-                                    <li>命運</li>
-                                    <li>&lt;3分鐘</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
-                            </a>
+                            <div class="img">
+                                <img src="img/game/game-coming-soon.jpg">
+                            </div>
+                            <h4>神秘輪盤</h4>
+                            <ul class="tags">
+                                <li>海盜</li>
+                                <li>命運</li>
+                                <li>&lt;3分鐘</li>
+                            </ul>
+                            <div class="btn"><button class="btn-tertiary" disabled>即將上線</button></div>
                         </li>
                     </ul>
                 </div>
