--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 				<section id="character">
 					<div class="bg"></div>
 					<div class="container">
-						<p class="h1 text-center">Charaters</p>
+						<p class="h1 text-center">Characters</p>
 						<ul>
 							<li class="protoss">
 								<img src="img/character/lanieve.jpg">
