--- a/game.html
+++ b/game.html
@@ -175,7 +175,7 @@
                         </li>
                         <li>
                             <div class="img">
-                                <img src="img/game/game-coming-soon.jpg">
+                                <img src="img/game/MC/thumb.jpg">
                             </div>
                             <h4>神秘輪盤</h4>
                             <ul class="tags">
