同步 v3.10 調整項目

--- a/MTP.html
+++ b/MTP.html
@@ -261,14 +261,14 @@
                                 <div class="odd-n-bet">
                                     <div class="odds">
                                         <label>
-                                            賠率
+                                            任務成功回報率
                                             <i class="icon-InfoCircle popUp--open" for="odds"></i>
                                         </label>
-                                        <h3>xN.NN</h3>
+                                        <h3>5.82</h3>
                                     </div>
                                     <div class="bets">
-                                        <label for="bets">賭本</label>
-                                        <input name="bets" type="number" placeholder="請輸入賭本" required>
+                                        <label for="bets">投入海盜積分(ZKZ)</label>
+                                        <input name="bets" type="number" placeholder="請輸入$ZKZ" required>
                                         <span class="helper">$ZKZ數量為 300</span>
                                     </div>
                                 </div>
@@ -341,9 +341,9 @@
         <div id="odds" class="popUp">
             <div class="popUp--container">
                 <button class="popUp--close"><i class="icon-Close"></i></button>
-                <h3>小提醒</h3>
+                <h3>Reminder</h3>
                 <div class="popUp--content">
-                    <p class="text-center">此賠率已包含3%莊家優勢。</p>
+                    <p>There is profit and loss in investment...</p>
                 </div>
                 <!-- <div class="popUp--btns">
                     <button class="btn-tertiary close">取消</button>
