--- a/index.html
+++ b/index.html
@@ -75,41 +75,49 @@
 							<li for="zkz"><a href="javascript:void()">$ZKZ</a></li>
 							<li for="bridge" class="dropdown">
 								<button>Bridge</button>
-								<div class="dropdown-content">
-									<ul>
-										<li>
-											<a href="https://cbridge.celer.network/1/56/USDC" target="_blank">Celer
-												Network</a>
-										</li>
-										<li>
-											<a href="https://router.via.exchange/zksync%20era/ETH/polygon/MATIC"
-												target="_blank">Via exchange</a>
-										</li>
-										<li>
-											<a href="https://www.orbiter.finance/?source=Ethereum&dest=Arbitrum"
-												target="_blank">Orbiter Finance</a>
-										</li>
-										<li>
-											<a href="https://bridge.poly.network/" target="_blank">Poly Network</a>
-										</li>
-										<li>
-											<a href="https://app.multichain.org/#/router" target="_blank">Multichain</a>
-										</li>
-									</ul>
+								<div class="dropdown-padding">
+									<div class="dropdown-content">
+										<ul>
+											<li>
+												<a href="https://cbridge.celer.network/1/56/USDC" target="_blank">Celer
+													Network</a>
+											</li>
+											<li>
+												<a href="https://router.via.exchange/zksync%20era/ETH/polygon/MATIC"
+													target="_blank">Via exchange</a>
+											</li>
+											<li>
+												<a href="https://www.orbiter.finance/?source=Ethereum&dest=Arbitrum"
+													target="_blank">Orbiter Finance</a>
+											</li>
+											<li>
+												<a href="https://bridge.poly.network/" target="_blank">Poly Network</a>
+											</li>
+											<li>
+												<a href="https://app.multichain.org/#/router"
+													target="_blank">Multichain</a>
+											</li>
+										</ul>
+									</div>
 								</div>
 							</li>
 							<li for="language" class="language dropdown">
 								<button>繁體中文</button>
-								<div class="dropdown-content">
-									<ul>
-										<li class="active"><a href="javascript:void()">繁體中文</a></li>
-										<li><a href="javascript:void()">English</a></li>
-										<li><a href="javascript:void()">日本語</a></li>
-									</ul>
+								<div class="dropdown-padding">
+									<div class="dropdown-content">
+										<ul>
+											<li class="active"><a href="javascript:void()">繁體中文</a></li>
+											<li><a href="javascript:void()">English</a></li>
+											<li><a href="javascript:void()">日本語</a></li>
+										</ul>
+									</div>
 								</div>
 							</li>
-							<li for="twitter"><a href="https://twitter.com/ZKaizoku_" target="_blank"><i
-										class="icon-Twitter"></i> Twitter</a></li>
+							<li for="twitter">
+								<a href="https://twitter.com/ZKaizoku_" target="_blank">
+									<i class="icon-Twitter"></i> Twitter
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -118,11 +126,13 @@
 					<button class="wallet popUp--open" for="login">連接錢包</button>
 					<div class="admin dropdown" style="display: none;">
 						<button>0x130...123DxA</button>
-						<div class="dropdown-content">
-							<ul>
-								<li onclick="location='personal.html'"><a href="javascript:void()">個人資訊</a></li>
-								<li><a href="javascript:void()">登出</a></li>
-							</ul>
+						<div class="dropdown-padding">
+							<div class="dropdown-content">
+								<ul>
+									<li onclick="location='personal.html'"><a href="javascript:void()">個人資訊</a></li>
+									<li><a href="javascript:void()">登出</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -185,7 +195,7 @@
 					</div>
 					<div class="container">
 						<div class="desc">
-							<p class="title-xl">精選遊戲</p>
+							<p class="h1">精選遊戲</p>
 							<p class="body-1">拿出望遠鏡，探索最新上架的矚目遊戲！</p>
 							<a class="button btn-secondary" href="game.html">查看全部遊戲</a>
 						</div>
@@ -303,7 +313,7 @@
 							<div class="swiper-pagination"></div>
 						</div>
 						<div class="desc">
-							<p class="title-xl">NFT</p>
+							<p class="h1">NFT</p>
 							<p class="body-1">
 								Description description description description description description description
 								description.
@@ -316,7 +326,7 @@
 				<section id="tutorial">
 					<div class="container">
 						<div class="title">
-							<p class="title-xl">平台使用教學</p>
+							<p class="h1">平台使用教學</p>
 							<p class="body-1">連接錢包、累積$ZKZ，與我們一同打造充滿驚奇的海盜冒險時代！</p>
 						</div>
 						<div class="content">
@@ -372,6 +382,115 @@
 					</div>
 					<div class="container">
 						<img src="img/PieChart.png">
+					</div>
+				</section>
+
+				<section id="character">
+					<div class="bg"></div>
+					<div class="container">
+						<p class="h1 text-center">Characters</p>
+						<ul>
+							<li class="protoss">
+								<img src="img/character/lanieve.jpg">
+								<h4><span>Lanieve</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Protoss"></i> Protoss</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="protoss">
+								<img src="img/character/joanne.jpg">
+								<h4><span>Joanne</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Protoss"></i> Protoss</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="demigod">
+								<img src="img/character/yoyo.jpg">
+								<h4><span>Yoyo</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Demigod"></i> Demigod</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="demigod">
+								<img src="img/character/nelson.jpg">
+								<h4><span>Nelson</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Demigod"></i> Demigod</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="demigod">
+								<img src="img/character/debby.jpg">
+								<h4><span>Debby</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Demigod"></i> Demigod</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/semi.jpg">
+								<h4><span>Semi</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/lexie.jpg">
+								<h4><span>Lexie</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/jacqueline.jpg">
+								<h4><span>Jacqueline</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/dylan.jpg">
+								<h4><span>Dylan</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+							<li class="terran">
+								<img src="img/character/lucy.jpg">
+								<h4><span>Lucy</span></h4>
+								<dl>
+									<dt>Race</dt>
+									<dd><i class="icon-Terran"></i> Terran</dd>
+									<dt>Features</dt>
+									<dd>???</dd>
+								</dl>
+							</li>
+						</ul>
 					</div>
 				</section>
 
