--- a/MC.html
+++ b/MC.html
@@ -127,7 +127,7 @@
                     <div class="dropdown-padding">
                         <div class="dropdown-content">
                             <ul>
-                                <li><a href="personal.html">個人資訊</a></li>
+                                <li><a href="personal.html">個人資產</a></li>
                                 <li><a href="javascript:void()">登出</a></li>
                             </ul>
                         </div>
