--- a/MTP.html
+++ b/MTP.html
@@ -122,7 +122,7 @@
                     <button>0x130...123DxA</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li><a href="personal.html">個人資訊</a></li>
+                            <li><a href="personal.html">個人資產</a></li>
                             <li><a href="javascript:void()">登出</a></li>
                         </ul>
                     </div>
@@ -228,12 +228,12 @@
 
                                 <div id="game-notice" class="popUp">
                                     <div class="popUp--container">
-                                        <h3>Win</h3>
+                                        <h3>遊戲結果</h3>
                                         <div class="popUp--content">
-                                            <p>Earn Points：10</p>
+                                            <p>回報海盜積分(ZKZ)</p>
                                         </div>
                                         <div class="popUp--btns">
-                                            <button class="submit replay">Replay</button>
+                                            <button class="submit replay">再玩一次</button>
                                         </div>
                                     </div>
                                 </div>
@@ -243,7 +243,7 @@
                                 <h3>默契海盜</h3>
                                 <div class="desc">
                                     <p>
-                                        若你隨機派出的海盜跟對手相同，你將獲得賭本乘上賠率的獎勵金額；如果你跟對手派出的海盜不同，系統將沒收你的賭本。
+                                        若你隨機派出的海盜跟對手相同，你將獲得$ZKZ乘上倍數的獎勵金額；如果你跟對手派出的海盜不同，系統將沒收你的$ZKZ。
                                     </p>
                                 </div>
                                 <div class="awards">
