--- a/game.html
+++ b/game.html
@@ -71,37 +71,41 @@
                         <li><a href="index.html#zkz">$ZKZ</a></li>
                         <li for="bridge" class="dropdown">
                             <button>Bridge</button>
-                            <div class="dropdown-content">
-                                <ul>
-                                    <li>
-                                        <a href="https://cbridge.celer.network/1/56/USDC" target="_blank">Celer
-                                            Network</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://router.via.exchange/zksync%20era/ETH/polygon/MATIC"
-                                            target="_blank">Via exchange</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.orbiter.finance/?source=Ethereum&dest=Arbitrum"
-                                            target="_blank">Orbiter Finance</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://bridge.poly.network/" target="_blank">Poly Network</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://app.multichain.org/#/router" target="_blank">Multichain</a>
-                                    </li>
-                                </ul>
+                            <div class="dropdown-padding">
+                                <div class="dropdown-content">
+                                    <ul>
+                                        <li>
+                                            <a href="https://cbridge.celer.network/1/56/USDC" target="_blank">Celer
+                                                Network</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://router.via.exchange/zksync%20era/ETH/polygon/MATIC"
+                                                target="_blank">Via exchange</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.orbiter.finance/?source=Ethereum&dest=Arbitrum"
+                                                target="_blank">Orbiter Finance</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://bridge.poly.network/" target="_blank">Poly Network</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://app.multichain.org/#/router" target="_blank">Multichain</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </li>
                         <li for="language" class="language dropdown">
                             <button>繁體中文</button>
-                            <div class="dropdown-content">
-                                <ul>
-                                    <li class="active"><a href="javascript:void()">繁體中文</a></li>
-                                    <li><a href="javascript:void()">English</a></li>
-                                    <li><a href="javascript:void()">日本語</a></li>
-                                </ul>
+                            <div class="dropdown-padding">
+                                <div class="dropdown-content">
+                                    <ul>
+                                        <li class="active"><a href="javascript:void()">繁體中文</a></li>
+                                        <li><a href="javascript:void()">English</a></li>
+                                        <li><a href="javascript:void()">日本語</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </li>
                         <li>
@@ -117,11 +121,13 @@
                 <button class="wallet popUp--open" for="login">連接錢包</button>
                 <div class="admin dropdown" style="display: none;">
                     <button>0x130...123DxA</button>
-                    <div class="dropdown-content">
-                        <ul>
-                            <li><a href="personal.html">個人資訊</a></li>
-                            <li><a href="javascript:void()">登出</a></li>
-                        </ul>
+                    <div class="dropdown-padding">
+                        <div class="dropdown-content">
+                            <ul>
+                                <li><a href="personal.html">個人資產</a></li>
+                                <li><a href="javascript:void()">登出</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
