--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<div class="dropdown-padding">
 							<div class="dropdown-content">
 								<ul>
-									<li onclick="location='personal.html'"><a href="javascript:void()">個人資訊</a></li>
+									<li onclick="location='personal.html'"><a href="javascript:void()">個人資產</a></li>
 									<li><a href="javascript:void()">登出</a></li>
 								</ul>
 							</div>
@@ -159,11 +159,8 @@
 					<div class="mask"></div>
 					<div class="captions">
 						<div class="active">
-							<p class="title-xl">FROM THE GARDEN TO THE ALLEY</p>
-							<p class="body-1">A small species that sprout from the dirt in the garden. While they're
-								earnestly driven by
-								the desire to help their Azuki friends, some BEANZ simply can't resist the allure of the
-								alley...</p>
+							<p class="title-xl">ZKAIZOKU</p>
+							<p class="body-1">ZKaizoku 為一個全球化的 Web3 娛樂聚合平台。若你加入我們，你將可以成為海賊的一份子，未來與我們一同共享 DAO 的成就！</p>
 						</div>
 						<div>
 							<p class="title-xl">HAVE A GOOD TIME!</p>
@@ -356,7 +353,7 @@
 								<li>
 									<div>
 										<h2>透過交互獲得$ZKZ</h2>
-										<p>遊玩平台上的遊戲，透過智能合約中的交互獲得$ZKZ。（待補一條公式）</p>
+										<p>遊玩平台上的遊戲，透過智能合約中的交互獲得$ZKZ。</p>
 										<a href="game.html" class="button">開始遊戲</a>
 									</div>
 								</li>
