小網跑版調整

--- a/personal.html
+++ b/personal.html
@@ -292,10 +292,12 @@
                     <div id="record" class="card">
                         <div class="card-content">
                             <h3>歷史紀錄</h3>
-                            <ul class="tab">
-                                <li class="active">提領紀錄</li>
-                                <li>購買紀錄</li>
-                            </ul>
+                            <div class="tab">
+                                <ul>
+                                    <li class="active">提領紀錄</li>
+                                    <li>購買紀錄</li>
+                                </ul>
+                            </div>
 
                             <div class="filter">
                                 <div class="pages">
