--- a/game.html
+++ b/game.html
@@ -192,6 +192,18 @@
                             </ul>
                             <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
                         </li>
+                        <li onclick="location='HOTP.html'">
+                            <div class="img">
+                                <img src="img/game/HOTP/thumb.jpg">
+                            </div>
+                            <h4>海盜之心</h4>
+                            <ul class="tags">
+                                <li>冒險</li>
+                                <li>性格</li>
+                                <li>心理測驗</li>
+                            </ul>
+                            <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
+                        </li>
                     </ul>
                 </div>
             </section>
