--- a/HOTP.html
+++ b/HOTP.html
@@ -1,1 +1,412 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="format-detection" content="telephone=no">
+
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
+    <!-- SEO -->
+    <meta name="keyword"
+        content="ZKaizoku,zkSync Era,Layer 2,空投,區塊鏈,區塊鏈平台,加密貨幣,token,鏈遊,遊戲,邊玩邊賺,P2E,GAMEFi,NFT,dNFT,web3 gaming" />
+    <meta name="description"
+        content="ZKaizoku為一式發行於zkSync Era上的一站式互動平台，旨在透過區塊鏈及dNFT技術串聯多款經典及原創遊戲，創造一個用戶透過玩遊戲累積交互積分、共同賺取更多空投的共榮生態圈！" />
+
+    <!-- share info -->
+    <meta property="og:locale" content="en" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://gashpo.github.io/zkaizoku/img/og-image.png" />
+    <link rel=”apple-touch-icon” href=”img/apple-touch-icon.png”>
+
+    <!-- Custom Icons -->
+    <link rel="stylesheet" href="vendor/icomoon/style.css">
+
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="css/bodySetting.css">
+    <link rel="stylesheet" href="css/mainPage.css">
+
+    <title>ZKaizoku 一站式互動平台</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KVQME3HX35"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-KVQME3HX35');
+    </script>
+
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NR4MV2JF');</script>
+    <!-- End Google Tag Manager -->
+</head>
+
+<body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NR4MV2JF" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    <div id="mainPage">
+        <header>
+            <a class="main-logo" href="index.html"><img src="img/logo_name.svg"></a>
+            <div class="options">
+                <button class="menu"></button>
+                <div class="nav">
+                    <ul>
+                        <li><a href="shop.html">商城</a></li>
+                        <li><a href="game.html">Game</a></li>
+                        <li><a href="index.html#nft-idx">NFT</a></li>
+                        <li><a href="index.html#tutorial">教學</a></li>
+                        <li><a href="index.html#zkz">$ZKZ</a></li>
+                        <li for="bridge" class="dropdown">
+                            <button>Bridge</button>
+                            <div class="dropdown-content">
+                                <ul>
+                                    <li>
+                                        <a href="https://cbridge.celer.network/1/56/USDC" target="_blank">Celer
+                                            Network</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://router.via.exchange/zksync%20era/ETH/polygon/MATIC"
+                                            target="_blank">Via exchange</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.orbiter.finance/?source=Ethereum&dest=Arbitrum"
+                                            target="_blank">Orbiter Finance</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://bridge.poly.network/" target="_blank">Poly Network</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://app.multichain.org/#/router" target="_blank">Multichain</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li for="language" class="language dropdown">
+                            <button>繁體中文</button>
+                            <div class="dropdown-content">
+                                <ul>
+                                    <li class="active"><a href="javascript:void()">繁體中文</a></li>
+                                    <li><a href="javascript:void()">English</a></li>
+                                    <li><a href="javascript:void()">日本語</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/ZKaizoku_" target="_blank">
+                                <i class="icon-Twitter"></i> Twitter
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="login">
+                <button class="wallet popUp--open" for="login">連接錢包</button>
+                <div class="admin dropdown" style="display: none;">
+                    <button>0x130...123DxA</button>
+                    <div class="dropdown-content">
+                        <ul>
+                            <li><a href="personal.html">個人資產</a></li>
+                            <li><a href="javascript:void()">登出</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <main class="innerPage">
+            <ul class="breadcrumb">
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="game.html">Game</a></li>
+                <li>海盜之心</li>
+            </ul>
+
+            <section id="game">
+                <div class="container">
+                    <div class="game-detail card">
+                        <div class="card-content">
+                            <div class="game-zone HOTP">
+                                <div class="default" style="background-image: url(img/game/HOTP/cover.jpg);">
+                                    <div class="game-title">
+                                        <h3>海盜之心</h3>
+                                        <!-- ↓若還沒連結錢包則先跳出連結錢包的彈窗 -->
+                                        <button>立即遊玩</button>
+                                    </div>
+                                </div>
+
+                                <div class="play-game">
+                                    <!-- <video autoplay muted loop poster="img/game/HOTP/bg.jpg">
+                                        <source src="img/game/HOTP/bg.mp4" type="video/mp4">
+                                    </video> -->
+                                    <div class="game-content">
+                                        <img class="title" src="img/game/HOTP/title.png">
+                                        <div class="frame">
+                                            <span>
+                                                <img src="img/game/HOTP/frame-middle.png">
+                                            </span>
+                                            <div class="frame-content">
+                                                <div class="img">
+                                                    <img src="img/game/HOTP/Lanieve.jpg">
+                                                    <h6>Lanieve</h6>
+                                                </div>
+                                                <div class="compare">
+                                                    <div class="match">
+                                                        <img src="img/game/HOTP/Jacqueline-s.jpg">
+                                                        <h6>MATCH</h6>
+                                                        <span>Jacqueline</span>
+                                                    </div>
+                                                    <div class="conflict">
+                                                        <img src="img/game/HOTP/Nelson-s.jpg">
+                                                        <h6>CONFLICT</h6>
+                                                        <span>Nelson</span>
+                                                    </div>
+                                                </div>
+                                                <div class="desc">
+                                                    <p>
+                                                        The Providers is conflict between parties. An interesting
+                                                        anecdote about a Provider is that they managed to find a way to
+                                                        get the whole team of MartianZ Corp to come together and agree
+                                                        on a plan for their arrival on Mars, despite the different
+                                                        personalities and group perspectives of the group group.
+                                                    </p>
+                                                    <!-- <p>
+                                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                                                        provident sequi esse perferendis corrupti ex quos molestiae,
+                                                        tempore expedita doloribus? Minus inventore consequuntur in
+                                                        dignissimos enim velit, aspernatur voluptatem voluptates?
+                                                    </p> -->
+                                                </div>
+                                                <div class="btns">
+                                                    <span>1 $ZKZ reward</span>
+                                                    <div>
+                                                        <button class="btn-s btn-tertiary">Share on Twitter</button>
+                                                        <button class="btn-s">Play again</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- toast -->
+                                    <div class="toast-container">
+                                        <!-- 未選擇賭注 -->
+                                        <div id="no-select" class="toast warning">
+                                            Please select any wager.
+                                        </div>
+
+                                        <!-- 未輸入賭本 -->
+                                        <div id="no-value" class="toast warning">
+                                            Please enter the bets.
+                                        </div>
+
+                                        <!-- 未輸入正整數 -->
+                                        <div id="wrong-value" class="toast warning">
+                                            Please enter a positive integer.
+                                        </div>
+
+                                        <!-- 超過可提領額度 -->
+                                        <div id="exceed" class="toast warning">
+                                            Insufficient balance.
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div id="game-notice" class="popUp">
+                                    <div class="popUp--container">
+                                        <h3>遊戲結果</h3>
+                                        <div class="popUp--content">
+                                            <p>回報海盜積分(ZKZ)</p>
+                                        </div>
+                                        <div class="popUp--btns">
+                                            <button class="submit replay">再玩一次</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="content">
+                                <h3>海盜之心</h3>
+                                <div class="desc">
+                                    <p>
+                                        若你隨機派出的海盜跟對手相同，你將獲得$ZKZ乘上倍數的獎勵金額；如果你跟對手派出的海盜不同，系統將沒收你的$ZKZ。
+                                    </p>
+                                </div>
+                                <div class="awards">
+                                    <div class="louder"><i class="icon-Loudspeaker"></i></div>
+                                    <div class="swiper award-list">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">“0x610...e258a”winning 243 $ZKZ！</div>
+                                            <div class="swiper-slide">“0x482...s100d”winning 123 $ZKZ！</div>
+                                            <div class="swiper-slide">“0x889...v207m”winning 63 $ZKZ！</div>
+                                            <div class="swiper-slide">"0x8e2...e2c3w”winning 60 $ZKZ！</div>
+                                            <div class="swiper-slide">"0xe21...rjs14”winning 50 $ZKZ！</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="odd-n-bet">
+                                    <div class="odds">
+                                        <label>
+                                            任務成功回報率
+                                            <i class="icon-InfoCircle popUp--open" for="odds"></i>
+                                        </label>
+                                        <h3>5.82</h3>
+                                    </div>
+                                    <div class="bets">
+                                        <label for="bets">投入海盜積分(ZKZ)</label>
+                                        <input name="bets" type="number" placeholder="請輸入$ZKZ" required>
+                                        <span class="helper">$ZKZ數量為 300</span>
+                                    </div>
+                                </div>
+                                <div class="count">
+                                    累積交互次數：5 次
+                                    <button class="btn-tertiary"><i class="icon-Change"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <div class="mask"></div>
+        </footer>
+
+
+
+
+
+        <!-- 預設 pop up -->
+        <div id="info" class="popUp">
+            <div class="popUp--container">
+                <button class="popUp--close"><i class="icon-Close"></i></button>
+                <h3>這是一個預設彈窗</h3>
+                <div class="popUp--content">
+                    <p>彈窗的內文放這裡</p>
+                    <ol>
+                        <li>也可以條列式</li>
+                        <li>放置內文</li>
+                        <li>或是<a href="">超連結</a></li>
+                    </ol>
+                </div>
+                <div class="popUp--btns">
+                    <button class="btn-tertiary close">取消</button>
+                    <button class="submit">確認</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- pop up 連接錢包 -->
+        <div id="login" class="popUp">
+            <div class="popUp--container">
+                <button class="popUp--close"><i class="icon-Close"></i></button>
+                <h3>Connect Your Wallet</h3>
+                <div class="popUp--content">
+                    <ul>
+                        <li>
+                            <img src="img/fox-icon.png">
+                            <span>Metamask</span>
+                            <i class="icon-ArrowRightS"></i>
+                        </li>
+                        <li>
+                            <img src="img/wallet-icon.png">
+                            <span>Wallet Connect</span>
+                            <i class="icon-ArrowRightS"></i>
+                        </li>
+                    </ul>
+                </div>
+                <!-- <div class="popUp--btns">
+					<button class="btn-tertiary">取消</button>
+					<button class="submit">確認</button>
+				</div> -->
+            </div>
+        </div>
+
+        <!-- pop up Odds -->
+        <div id="odds" class="popUp">
+            <div class="popUp--container">
+                <button class="popUp--close"><i class="icon-Close"></i></button>
+                <h3>Reminder</h3>
+                <div class="popUp--content">
+                    <p>There is profit and loss in investment...</p>
+                </div>
+                <!-- <div class="popUp--btns">
+                    <button class="btn-tertiary close">取消</button>
+                    <button class="submit">確認</button>
+                </div> -->
+            </div>
+        </div>
+
+        <!-- 遊戲中蓋版 (禁止操作網頁) -->
+        <div class="full-page"></div>
+    </div>
+
+
+
+
+    <!-- jQuery -->
+    <script src="vendor/jquery.min.js"></script>
+    <script type="text/javascript">
+        var mediaPC = window.matchMedia('(max-width: 1440px)')
+        var mediaLaptop = window.matchMedia('(max-width: 1280px)')
+        var mediaPad = window.matchMedia('(max-width: 1024px)')
+        var mediaSmallPad = window.matchMedia('(max-width: 768px)')
+        var mediaMobile = window.matchMedia('(max-width: 516px)')
+        var mediaSmallMobile = window.matchMedia('(max-width: 320px)')
+    </script>
+
+    <!-- Custom settings -->
+    <script src="js/navigation.js"></script>
+    <script src="js/dropdown.js"></script>
+    <script src="js/fulldown.js"></script>
+    <script src="js/tab.js"></script>
+    <script src="js/popUp.js"></script>
+    <script src="js/connect-wallet.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/HOTP.js"></script>
+
+    <!-- Swiper 套件 -->
+    <script src="vendor/swiper/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".award-list", {
+            direction: "vertical",
+            slidesPerView: 3,
+            slidesPerGroup: 1,
+            spaceBetween: 8,
+            loop: true,
+            autoplay: {
+                delay: 3000,
+                disableOnInteraction: false,
+            },
+            on: {
+                touchMove: function (e) {
+                    e.preventDefault();
+                },
+            },
+            breakpoints: {
+                1025: {
+                    slidesPerView: 2,
+                },
+                1281: {
+                    slidesPerView: 3,
+                },
+            },
+        });
+    </script>
+</body>
+
 </html>
